--- a/templates/filchat/results.html
+++ b/templates/filchat/results.html
@@ -2,7 +2,7 @@
 {% extends "../base/base.html" %}
 {% load static %}
 
-{% block content %}
+{% block page_content %}
 <div class="container mx-auto p-4">
     <h1 class="text-2xl font-bold mb-4">Résultats du traitement</h1>
     <p class="mb-4">Votre fichier a été traité avec succès.</p>
