--- a/templates/filchat/upload.html
+++ b/templates/filchat/upload.html
@@ -2,7 +2,7 @@
 {% extends "../base/base.html" %}
 {% load static %}
 
-{% block content %}
+{% block page_content %}
 <div class="container mx-auto p-4">
     <h1 class="text-2xl font-bold mb-4">FilChat - Découpe de conversations</h1>
     <form method="post" enctype="multipart/form-data" class="space-y-4">
