--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -1,25 +1,21 @@
-{% load static %}
-{% load compress %}
-{% load custom_filters %}
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% load static wagtailcore_tags wagtailuserbar %}
 
-{% block title %}
-    {% if page.title %}{{page.title|truncate_title:50}}{% else %}SecretBox{% endif %}
-{% endblock %}
-
-
-{# Tailwind CSS #}
-<link rel="stylesheet" href="{% static 'css/output.css' %}">
-
-{# Favicon #}
-<link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
-
-<!-- custom css compressé avec django-compressor -->
-{% compress css %}
-<link rel="stylesheet" href="{% static 'css/custom.css' %}">
-{% endcompress %}
-
-<!-- Balises meta supplémentaires -->
-<meta name="description" content="FilChat - Découpez et archivez vos conversations">
-{% block extra_head %}{% endblock %}
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+        {% block title %}
+        {% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}
+        {% endblock %}
+        {% block title_suffix %}
+        {% wagtail_site as current_site %}
+        {% if current_site and current_site.site_name %}- {{ current_site.site_name }}{% endif %}
+        {% endblock %}
+    </title>
+    {% if page.search_description %}
+    <meta name="description" content="{{ page.search_description }}" />
+    {% endif %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+</head>
