--- a/templates/filchat/filchat_page.html
+++ b/templates/filchat/filchat_page.html
@@ -1,12 +1,11 @@
 <!-- templates.filchat.filchat_page.html -->
-{% extends "../base/base.html" %}
+{% extends "base.html" %}
 {% load wagtailcore_tags static %}
 
 {% block body_class %}template-filchatpage{% endblock %}
 
 {% block page_content %}
 <main class="container mx-auto p-4">
-    {% block title %}Accueil - FilChat{% endblock %}
 
     {{ page.intro|richtext }}
 
@@ -20,7 +19,7 @@
                 <input type="file" name="file" class="mt-1 block w-full" required>
             </div>
             <div>
-                <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
+                <button type="submit" class="px-4 py-2 bg-blue-600 text-blue-950 rounded hover:bg-blue-700">
                     Traiter le fichier
                 </button>
             </div>
@@ -29,11 +28,12 @@
 
     {# Section pour afficher les résultats (si un fichier a été traité) #}
     {% if file_id %}
+    <hr>
     <div class="bg-green-50 p-6 rounded-lg shadow">
         <h2 class="text-xl font-semibold mb-4">Résultats du traitement</h2>
         <p class="mb-4">Votre fichier a été traité avec succès !</p>
-        <a href="{% url 'download_file' file_id=file_id %}"
-            class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+        <a href="{% url 'filchat:download_file' file_id=file_id %}"
+            class="px-4 py-2 bg-green-600 text-blue-950 rounded hover:bg-green-700">
             Télécharger l'archive
         </a>
     </div>
